--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    font-size: 100%;
+}
 body{
     background: linear-gradient(
         to right,red,blue
@@ -9,24 +12,26 @@ body{
     height: 98vh;
 }
 h1{
-    position: absolute;
-    top: 5rem;
     font-size: 3rem;
     color: white;
     text-shadow: 5px 5px 5px black;
     font-family: "Ga Maamli", sans-serif;
     font-weight: 400;
-    cursor: default;
-    
+    cursor: default;   
 }
 .container{
-    width: 30rem;
-    height: 22rem;
+    width: 25rem;
+    height: 40rem;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 .mini{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 100%;
 }
 .clr1,.clr2{
     cursor: pointer;
@@ -55,7 +60,7 @@ h1{
 }
 h3{
     font-size: 1.8rem;
-    text-align: center;
+    /* text-align: center; */
     color: white;
     font-family: "Acme", sans-serif;
     font-weight: 500;
@@ -106,6 +111,7 @@ h3{
     color: white;
     box-shadow: 5px 5px 40px black;
     cursor: default;
+    gap: 1rem;
     &i{
         font-size: 2rem;
         margin-right: 0.5rem;
@@ -155,4 +161,27 @@ h3{
 .right{
     right: 0;
     top: 35%;
+}
+
+@media (width < 1200px) and (width > 999px){
+    html{
+        font-size: 80%;
+    }
+}
+
+@media (width < 1000px) and (width > 600px) {
+    html{
+        font-size: 110%;
+    }
+}
+
+@media (width < 601px) and (width > 400px) {
+    html{
+        font-size: 90%;
+    }
+}
+@media (width < 401px) {
+    html{
+        font-size: 75%;
+    }
 }
